--- a/templates/icons_safelist.html
+++ b/templates/icons_safelist.html
@@ -3,3 +3,4 @@
 <span class="icon-[hugeicons--stationery]"></span>
 <span class="icon-[healthicons--human-resoruces]"></span>
 <span class="icon-[ion--construct]"></span>
+<span class="icon-[iconoir--birthday-cake]"></span>
