--- a/templates/apps/directorio/contacto/create.html
+++ b/templates/apps/directorio/contacto/create.html
@@ -15,7 +15,10 @@
 
             <!-- END -->
             <div class="justify-self-end">
-                <button form="contacto-form" class="btn btn-primary btn-sm">Crear</button>
+                <c-apps.directorio.contactos.modal.confirmar tipo="crear"/>
+                <button type="button" onclick="confirmar_contacto.showModal()" class="btn btn-primary btn-sm">
+                    Crear
+                </button>
             </div>
         </div>
 
