--- a/templates/components/layouts/base.html
+++ b/templates/components/layouts/base.html
@@ -13,7 +13,7 @@
 
 
     <script type="text/javascript" src="{% static 'admin/js/vendor/jquery/jquery.js' %}"></script>
-    <script src="https://unpkg.com/@zumer/snapdom/dist/snapdom.js"></script>
+    <script src="{% static 'js/snapdom/snapdom.js' %}"></script>
 
 </head>
 <body hx-headers='{"x-csrftoken": "{{ csrf_token }}"}'>
